TCP upload DONE 100%

--- a/TCPserver/Makefile
+++ b/TCPserver/Makefile
@@ -1,7 +1,5 @@
-all: tcpserver
-
+all:	tcpserver
 tcpserver: tcp_server.c
-    gcc -o tcpserver tcp_server.c
-    
+	gcc ./tcp_server.c -lpthread -o tcpserver 
 clean: 
 	rm tcpserver 
